--- a/.github/workflows/self-test.yaml
+++ b/.github/workflows/self-test.yaml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: pjstaab/chart-diff@main
+      uses: pjstaab/chart-diff@test
