--- a/action.yaml
+++ b/action.yaml
@@ -18,9 +18,8 @@ runs:
     shell: bash
     run: |
       for chart in charts/*; do
-        helm template $chart > "${chart}_current.yaml"
+        helm template $chart >> $CURRENT
       done
-      ls charts
 
   - name: Checkout default branch
     uses: actions/checkout@v4
@@ -31,13 +30,12 @@ runs:
     shell: bash
     run: |
       for chart in charts/*; do
-        helm template $chart > "${chart}_default.yaml"
+        helm template $chart >> $DEFAULT
       done
-      ls charts
 
   - name: Diff Helm charts
     shell: bash
     run: |
       for chart in charts/*; do
-        diff "${chart}_default.yaml" "${chart}_current.yaml"
+        diff $DEFAULT $CURRENT
       done
