--- a/action.yaml
+++ b/action.yaml
@@ -40,7 +40,7 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> $GITHUB_STEP_SUMMARY
+      git diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> $GITHUB_STEP_SUMMARY
 
   - name: End step
     shell: bash
