--- a/action.yaml
+++ b/action.yaml
@@ -18,6 +18,7 @@ runs:
     shell: bash
     run: |
       for chart in charts/*; do
+        helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/current.yaml"
       done
       cat "${{ runner.temp }}/current.yaml"
@@ -32,6 +33,7 @@ runs:
     shell: bash
     run: |
       for chart in charts/*; do
+        helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/default.yaml"
       done
       cat "${{ runner.temp }}/default.yaml"
