--- a/action.yaml
+++ b/action.yaml
@@ -28,6 +28,7 @@ runs:
     uses: actions/checkout@v4
     with:
       ref: ${{ github.event.repository.default_branch }}
+      fetch-depth: 0
 
   - name: Render Helm chart (default branch)
     shell: bash
