--- a/action.yaml
+++ b/action.yaml
@@ -33,5 +33,4 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      git diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" > "${{ runner.temp }}/diff.yaml"
-      cat "${{ runner.temp }}/diff.yaml" >> $GITHUB_STEP_SUMMARY
+      git diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> $GITHUB_STEP_SUMMARY
