--- a/action.yaml
+++ b/action.yaml
@@ -33,5 +33,7 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      git diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
+      echo "```" >> "${{ runner.temp }}/diff.yaml"
+      git -u diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
+      echo "```" >> "${{ runner.temp }}/diff.yaml"
       cat "${{ runner.temp }}/diff.yaml" >> $GITHUB_STEP_SUMMARY
