--- a/action.yaml
+++ b/action.yaml
@@ -15,7 +15,6 @@ runs:
         helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/current.yaml"
       done
-      cat "${{ runner.temp }}/current.yaml"
 
   - name: Checkout default branch
     uses: actions/checkout@v4
@@ -34,6 +33,7 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
+      touch "${{ runner.temp }}/diff.yaml"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
       diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
