before cat diff

--- a/action.yaml
+++ b/action.yaml
@@ -37,4 +37,6 @@ runs:
       echo "```" >> "${{ runner.temp }}/diff.yaml"
       diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
+      echo "Before cat diff"
+      cat "${{ runner.temp }}/diff.yaml"
       cat "${{ runner.temp }}/diff.yaml" >> $GITHUB_STEP_SUMMARY
