cat during steps

--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,7 @@ runs:
         helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/current.yaml"
       done
+      cat "${{ runner.temp }}/current.yaml"
 
   - name: Checkout default branch
     uses: actions/checkout@v4
@@ -28,6 +29,7 @@ runs:
         helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/default.yaml"
       done
+      cat "${{ runner.temp }}/default.yaml"
 
   - name: Diff Helm charts
     shell: bash
