--- a/action.yaml
+++ b/action.yaml
@@ -11,7 +11,6 @@ runs:
   - name: Render Helm chart (current branch)
     shell: bash
     run: |
-      touch "${{ runner.temp }}/current.yaml"
       for chart in charts/*; do
         helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/current.yaml"
@@ -26,7 +25,6 @@ runs:
   - name: Render Helm chart (default branch)
     shell: bash
     run: |
-      touch "${{ runner.temp }}/default.yaml"
       for chart in charts/*; do
         helm dep build $chart
         helm template $chart >> "${{ runner.temp }}/default.yaml"
@@ -37,10 +35,7 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      cat "Echo Default"
-      cat "${{ runner.temp }}/default.yaml"
-      cat "Echo Current"
-      cat "${{ runner.temp }}/current.yaml"
+      ls -l "${{ runner.temp }}"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
       diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
