--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,7 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
+      touch "${{ runner.temp }}/diff.yaml"
       ls -l "${{ runner.temp }}"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
       diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> "${{ runner.temp }}/diff.yaml"
