--- a/action.yaml
+++ b/action.yaml
@@ -38,7 +38,7 @@ runs:
       touch "${{ runner.temp }}/diff.yaml"
       ls -l "${{ runner.temp }}"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
-      diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml"
+      diff "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml"
       echo "```" >> "${{ runner.temp }}/diff.yaml"
       cat "${{ runner.temp }}/diff.yaml"
       cat "${{ runner.temp }}/diff.yaml" >> $GITHUB_STEP_SUMMARY
