--- a/action.yaml
+++ b/action.yaml
@@ -37,4 +37,4 @@ runs:
     run: |
       touch "${{ runner.temp }}/diff.yaml"
       ls -l "${{ runner.temp }}"
-      diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml"
+      diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> $GITHUB_STEP_SUMMARY
