--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,6 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      touch "${{ runner.temp }}/diff.yaml"
-      ls -l "${{ runner.temp }}"
-      diff -u "${{ runner.temp }}/default.yaml" "${{ runner.temp }}/current.yaml" >> $GITHUB_STEP_SUMMARY
+      touch ${{ runner.temp }}/diff.yaml
+      ls -l ${{ runner.temp }}
+      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> 
