--- a/action.yaml
+++ b/action.yaml
@@ -35,7 +35,8 @@ runs:
     shell: bash
     continue-on-error: true
     run: |
-      touch ${{ runner.temp }}/diff.yaml
       ls -l ${{ runner.temp }}
-      echo "```" > ${{ runner.temp }}/diff.yaml
-      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml
+      echo '```' >> ${{ runner.temp }}/diff.md
+      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md
+      echo '```' >> ${{ runner.temp }}/diff.md
+      cat ${{ runner.temp }}/diff.md
