--- a/action.yaml
+++ b/action.yaml
@@ -37,6 +37,6 @@ runs:
     run: |
       ls -l ${{ runner.temp }}
       echo '```' >> ${{ runner.temp }}/diff.md
-      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md
+      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md || true
       echo '```' >> ${{ runner.temp }}/diff.md
       cat ${{ runner.temp }}/diff.md
