--- a/action.yaml
+++ b/action.yaml
@@ -34,7 +34,7 @@ runs:
     continue-on-error: true
     run: |
       ls -l ${{ runner.temp }}
-      echo '```' >> ${{ runner.temp }}/diff.md
+      echo '```diff' >> ${{ runner.temp }}/diff.md
       diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md || true
       echo '```' >> ${{ runner.temp }}/diff.md
       cat ${{ runner.temp }}/diff.md >> $GITHUB_STEP_SUMMARY
