--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,6 @@ runs:
     run: |
       ls -l ${{ runner.temp }}
       echo '```diff' >> ${{ runner.temp }}/diff.md
-      diff -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md || true
+      diff --minimal -u ${{ runner.temp }}/default.yaml ${{ runner.temp }}/current.yaml >> ${{ runner.temp }}/diff.md || true
       echo '```' >> ${{ runner.temp }}/diff.md
       cat ${{ runner.temp }}/diff.md >> $GITHUB_STEP_SUMMARY
